# CenThal

./: prompt.md
docs/: links.txt  spec.md
skald/: Cargo.toml
skald/crates/skald-ast/: Cargo.toml
skald/crates/skald-ast/src/: lib.rs
skald/crates/skald-borrowck/: Cargo.toml
skald/crates/skald-borrowck/src/: lib.rs
skald/crates/skald-driver/: Cargo.toml
skald/crates/skald-driver/src/: lib.rs  main.rs
skald/crates/skald-hir/: Cargo.toml
skald/crates/skald-hir/src/: lib.rs
skald/crates/skald-lexer/: Cargo.toml
skald/crates/skald-lexer/src/: lib.rs
skald/crates/skald-modifiers/: Cargo.toml
skald/crates/skald-modifiers/src/: lib.rs
skald/crates/skald-parser/: Cargo.toml
skald/crates/skald-parser/src/: lib.rs
skald/crates/skald-resolve/: Cargo.toml
skald/crates/skald-resolve/src/: lib.rs
skald/crates/skald-types/: Cargo.toml
skald/crates/skald-types/src/: lib.rs
skald/scripts/: add_var_to_struct_fields.py  fix_extern_semicolons.py  fix_implements_syntax.py  fix_trait_methods.py  fix_use_semicolons.py  simplify_generics.py
skald/test_scripts/: 00_trivial.skald  00b_test.skald  00c_test.skald  00d_test.skald  00e_test.skald  00f_test.skald  00g_test.skald  01_hello_world.skald  02_sentry.skald  03_concurrency.skald  04_generics_traits.skald  05_mass_ecs.skald  06_hot_path.skald  07_modifiers.skald  08_type_system.skald  09_operators_literals.skald  10_ffi.skald  11_control_flow.skald  12_visibility_edge_cases.skald  13_structs_enums.skald  14_closures.skald  15_error_scenarios.skald  16_modules_docs.skald  17_special_traits.skald  18_annotations.skald  19_syntax_stress.skald  20_hot_reload.skald
