[package]
name = "skald-modifiers"
description = "Modifier parser/validator + effective UE flag computation (spec §3.2, §6, §7)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
skald-ast.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
bitflags = { version = "2", features = ["serde"] }
